--- a/index.html
+++ b/index.html
@@ -248,11 +248,12 @@
     </div>
   </template>
 
+  <script src="js/util.js"></script>
   <script src="js/load.js"></script>
   <script src="js/filter.js"></script>
-  <script src="js/util.js"></script>
   <script src="js/card.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/form.js"></script>
+  <script src="js/message.js"></script>
 </body>
 </html>
